@@ -68,6 +68,20 @@
                 </plugin>
 
                 <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>cobertura-maven-plugin</artifactId>
+                    <version>2.7</version>
+                    <configuration>
+                        <formats>
+                            <format>html</format>
+                            <format>xml</format>
+                        </formats>
+                        <check />
+                    </configuration>
+                </plugin>
+
+
+                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <configuration>
@@ -75,7 +89,7 @@
                         <redirectTestOutputToFile>true</redirectTestOutputToFile>
                         <forkCount>3</forkCount>
                         <reuseForks>true</reuseForks>
-<!--                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
+                        <!--suppress UnresolvedMavenProperty -->
                         <argLine>${surefireArgLine} -Xmx1024m -XX:MaxPermSize=256m -noverify</argLine>
                     </configuration>
                 </plugin>
